# simcpi

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  test.py  test1.py  test3.py  test4.py  test6.py  test7.py
simcpi/: SKILL.md  __init__.py  __main__.py  feedback.py  mcpclient.py  mcpserver.py  optimize.py
simcpi/static/: mcpark.html
tests/: test_simcpi.py
