[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simcpi"
version = "0.4.0"
description = "One decorator. REST endpoint + MCP tool. Built-in UI, file serving, and LLM client."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Mohan Musunuri" }
]
keywords = [
  "mcp", "fastapi", "fastmcp", "llm", "ai", "tool-use",
  "openai", "anthropic", "claude", "agent", "api"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "fastapi>=0.100.0",
  "fastmcp>=3.2",
  "pydantic>=2.0.0",
  "uvicorn>=0.20.0",
  "openai>=1.0.0",
  "anthropic>=0.20.0",
]

[project.optional-dependencies]
files = [
  "pandas>=1.5.0",
  "openpyxl>=3.0.0",
  "matplotlib>=3.5.0",
]
all = [
  "pandas>=1.5.0",
  "openpyxl>=3.0.0",
  "matplotlib>=3.5.0",
]

[project.scripts]
mcpark = "simcpi.__main__:main"

[project.urls]
Homepage    = "https://pypi.org/project/simcpi/"
Source      = "https://github.com/mohan120396/simcpi"
"Bug Tracker" = "https://github.com/mohan120396/simcpi/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
simcpi = ["static/*.html", "SKILL.md"]
